--- a/web/kpt.html
+++ b/web/kpt.html
@@ -6,6 +6,10 @@
   </head>
   <body onLoad="reload()">
     <div id="headder">
+    ユーザ
+     <textarea id="user"></textarea>
+    <input type="button" value="ログイン" id="login" onClick="login()"/>
+    <br><br>
     日付
     <select id="date_selector" onChange="change()">
     </select>
