--- a/web/kpt.html
+++ b/web/kpt.html
@@ -16,6 +16,8 @@
     <input type="text" id="date" />
     <input type="button" value="追加" id="create" onClick="add()"/>
     <input type="button" value="保存" id="save" onClick="save()"/>
+    &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+    <input type="button" value="削除" id="delete" onClick="del()"/>
    </div>
    <div id="body">
      KEEP
