--- a/web/kpt.html
+++ b/web/kpt.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8"/>
     <script src="script.js" type="text/javascript"></script>
+    <link rel="stylesheet" type="text/css" href="style.css">
   </head>
   <body onLoad="reload()">
   <h1>KPT管理システム</h1>
